# subseq_tasks

./: .gitignore  AGENTS.md  Cargo.toml  README.md
design/: chat_requirements_handoff_2026-02-08.md  task_links_graph_replacement_readiness_2026-02-08.md  task_parity_backfill_2026-02-09.md  task_states.dot  task_update_hook_trait_2026-02-09.md
migrations/: 20260208000100_base_tasks.sql  20260208020000_task_workflow_comments_log.sql  20260208143000_task_presentation_view.sql  20260208154000_project_milestone_presentation_views.sql  20260209010100_task_link_graph_storage.sql  20260209010200_drop_task_links_table.sql  20260209020100_task_attachments_and_milestone_links.sql
src/: api.rs  db.rs  error.rs  lib.rs  models.rs  permissions.rs  test_harness.rs
src/api/: milestones.rs  mod.rs  projects.rs  tasks.rs
src/db/: milestones.rs  mod.rs  projects.rs  tasks.rs
src/models/: common.rs  ids.rs  milestones.rs  mod.rs  projects.rs  tasks.rs
src/tables/: milestones.rs  project_metadata.rs  projects.rs  task_link_type.rs  task_list_urls.rs  task_update.rs  tasks.rs
