[package]
name = "subseq_tasks"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8", optional = true, features = ["macros", "http2"] }
chrono = { version = "0.4.43", features = ["serde"] }
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", optional = true, features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono", "json"] }
subseq_auth = { git = "https://github.com/subseq-io/subseq_auth.git", branch = "main" }
subseq_graph = { git = "https://github.com/subseq-io/subseq_graph.git", branch = "main", default-features = false, features = ["sqlx"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[features]
default = ["api"]
api = ["dep:axum", "sqlx"]
sqlx = ["dep:sqlx"]
